@@ -75,6 +75,10 @@ class CardTerminal < ApplicationRecord
         return set_condition( Cocard::States::UNKNOWN,
                               "IP Mismatch: gefundene und konfigurierte IP-Adresse weichen von einander ab" )
     end
+    if reboot_active?
+      return set_condition(Cocard::States::WARNING,
+                           "Reboot um #{rebooted_at.localtime.to_s}, stay tuned...")
+    end
     if online?
       return set_condition( Cocard::States::OK,
                      "Kartenterminal online" )
