@@ -13,7 +13,7 @@
         <%= render ConditionIconComponent.new(item: @connector) %>
       </div>
       <div role="toolbar" class="ms-auto pt-3">
-        <%= render Connector::RebootButtonComponent.new(connector: @connector) if can? :reboot, @connector %>
+        <%= render RebootButtonComponent.new(item: @connector) if can? :reboot, @connector %>
         <%= button_to(t('cocard.fetch_sds'),
                       fetch_sds_connector_path(@connector),
                       class: 'btn btn-warning me-1') if can? :manage, @connector 
