@@ -268,3 +268,4 @@ de:
   card_terminals:
     with_smcb: KT mit SMC-B
     update_ip_from_current: Vom Konnektor gemeldete IP übernehmen
+    do_reboot: Kartenterminal neu starten? Das Kartenterminal ist dann für einige Zeit nicht verfügbar!
