@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[7.2].define(version: 2025_02_22_094605) do
+ActiveRecord::Schema[7.2].define(version: 2025_03_02_143909) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
 
@@ -108,6 +108,7 @@ ActiveRecord::Schema[7.2].define(version: 2025_02_22_094605) do
     t.bigint "acknowledge_id"
     t.inet "current_ip"
     t.string "idle_message", default: ""
+    t.datetime "rebooted_at", precision: nil
     t.index ["condition"], name: "index_card_terminals_on_condition"
     t.index ["connector_id"], name: "index_card_terminals_on_connector_id"
     t.index ["location_id"], name: "index_card_terminals_on_location_id"
