@@ -206,7 +206,16 @@
 <div class="sect1">
 <h2 id="_0_7_1_unreleased"><a class="anchor" href="#_0_7_1_unreleased"></a>0.7.1 - unreleased</h2>
 <div class="sectionbody">
-
+<div class="ulist">
+<ul>
+<li>
+<p>Update des Ruhebildschirms (Anzeige im Display) für Orga6141 Terminals</p>
+</li>
+<li>
+<p>Rebootmöglichkeit von Orga6141 Terminals.</p>
+</li>
+</ul>
+</div>
 </div>
 </div>
 <div class="sect1">
