@@ -271,7 +271,8 @@ bin/rails g migration AddInternalToCardTerminal \
   connector:belongs_to \
   network:belongs_to \
   firmware_version:string \
-  acknowledge_id:bigint</code></pre>
+  acknowledge_id:bigint \
+  rebooted_at:timestamp</code></pre>
 </div>
 </div>
 <div class="listingblock">
